# roadr_specialist_partnership

./: Cargo.toml  app.css  index.html  specialist_partnership-1aa358a600a59abb_bg.wasm  specialist_partnership-2b2d10a315d13f90.js  specialist_partnership-2b2d10a315d13f90_bg.wasm  specialist_partnership-76dba2c4300056c9.js  specialist_partnership-76dba2c4300056c9_bg.wasm  specialist_partnership-c7e15ed80ac5142c.js  specialist_partnership-c7e15ed80ac5142c_bg.wasm
src/: main.rs
src/components/: button.rs  flex_box.rs  header.rs  mod.rs  text_box.rs
src/utils/: style.rs
