[package]
name = "specialist_partnership"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[package.metadata.leptos]
assets-dir = "public"

[dependencies]
anyhow.workspace = true
leptos = { version = "0.7.4", features = ["csr"] }

gloo-console = "0.3.0"
gloo-net = { version = "0.6.0", features = ["http"] }
js-sys = "0.3.72"
web-sys = { version = "0.3.72", features = ["Navigator"] }
woothee = "0.13.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
futures = "0.3.31"

[lints.clippy]
empty_docs = "allow"
